add_subdirectory(rt)
add_subdirectory(sde)

set(CARTS_RT_TO_LLVM_SOURCE_FILES ${CARTS_RT_TO_LLVM_SOURCE_FILES} PARENT_SCOPE)
set(CARTS_RT_TRANSFORMS_SOURCE_FILES ${CARTS_RT_TRANSFORMS_SOURCE_FILES} PARENT_SCOPE)
set(CARTS_SDE_TRANSFORMS_SOURCE_FILES ${CARTS_SDE_TRANSFORMS_SOURCE_FILES} PARENT_SCOPE)
