file(GLOB CARTS_UTILS_SOURCE_FILES CONFIGURE_DEPENDS "*.cpp")

file(GLOB CARTS_METADATA_SOURCE_FILES CONFIGURE_DEPENDS "metadata/*.cpp")
set(CARTS_UTILS_SOURCE_FILES ${CARTS_UTILS_SOURCE_FILES} ${CARTS_METADATA_SOURCE_FILES})

file(GLOB CARTS_ABSTRACT_MACHINE_SOURCE_FILES CONFIGURE_DEPENDS "abstract_machine/*.cpp")
set(CARTS_UTILS_SOURCE_FILES ${CARTS_UTILS_SOURCE_FILES} ${CARTS_ABSTRACT_MACHINE_SOURCE_FILES})

set(CARTS_UTILS_SOURCE_FILES ${CARTS_UTILS_SOURCE_FILES} PARENT_SCOPE)

add_subdirectory(benchmarks)
