file(GLOB CARTS_UTILS_SOURCE_FILES CONFIGURE_DEPENDS "*.cpp")

file(GLOB CARTS_MACHINE_SOURCE_FILES CONFIGURE_DEPENDS "machine/*.cpp")
set(CARTS_UTILS_SOURCE_FILES ${CARTS_UTILS_SOURCE_FILES} ${CARTS_MACHINE_SOURCE_FILES})

set(CARTS_COSTS_SOURCE_FILES)
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/costs/CMakeLists.txt")
  add_subdirectory(costs)
endif()
set(CARTS_UTILS_SOURCE_FILES ${CARTS_UTILS_SOURCE_FILES} ${CARTS_COSTS_SOURCE_FILES})

set(CARTS_UTILS_SOURCE_FILES ${CARTS_UTILS_SOURCE_FILES} PARENT_SCOPE)

add_subdirectory(benchmarks)
