add_library(CartsBenchmarks STATIC
  CartsBenchmarks.cpp
)

# -O0: prevent empty parallel region optimization
# -stdlib=libc++: match the libc++ used at final link time
target_compile_options(CartsBenchmarks PRIVATE -O0 -stdlib=libc++)

# Enable OpenMP for thread pool warmup (required for single-node ARTS vs OMP comparisons)
find_package(OpenMP REQUIRED)
target_link_libraries(CartsBenchmarks PRIVATE OpenMP::OpenMP_CXX)

# dlsym (Linux needs ${CMAKE_DL_LIBS}; macOS resolves in libSystem)
target_link_libraries(CartsBenchmarks PRIVATE ${CMAKE_DL_LIBS})

set_target_properties(CartsBenchmarks PROPERTIES
  OUTPUT_NAME cartsbenchmarks
)

install(TARGETS CartsBenchmarks
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

install(FILES ${CMAKE_SOURCE_DIR}/include/arts/Utils/Benchmarks/CartsBenchmarks.h
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/arts/Utils/Benchmarks
)
