add_subdirectory(Analysis)
add_subdirectory(Conversion)
add_subdirectory(IR)
add_subdirectory(Transforms)
add_subdirectory(Verify)

set(CARTS_SDE_ANALYSIS_SOURCE_FILES ${CARTS_SDE_ANALYSIS_SOURCE_FILES} PARENT_SCOPE)
set(CARTS_SDE_CONVERSION_SOURCE_FILES ${CARTS_SDE_CONVERSION_SOURCE_FILES} PARENT_SCOPE)
set(CARTS_SDE_TRANSFORMS_SOURCE_FILES ${CARTS_SDE_TRANSFORMS_SOURCE_FILES} PARENT_SCOPE)
set(CARTS_SDE_VERIFY_SOURCE_FILES ${CARTS_SDE_VERIFY_SOURCE_FILES} PARENT_SCOPE)
